# diamond-dae-pipeline

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.githooks/: pre-commit
notebooks-pipeline/clustering/: clustering.ipynb
notebooks-pipeline/denoising/: config.json
notebooks-pipeline/training/: config.json
notebooks/clustering/: clustering.ipynb  config.json
notebooks/denoising/: denoising-final-map.ipynb
notebooks/preprocessing/final-map/: config.json  final-map-preprocessing.ipynb
notebooks/preprocessing/trainset/: config.json  trainset-preprocessing.ipynb
notebooks/training/: config.json  training.ipynb
prepare-data-from-zenodo/map/: config.json  prepare-map-from-zenodo.ipynb
prepare-data-from-zenodo/train/: config.json  prepare-data-from-zenodo.ipynb  prepare-train-data-from-zenodo.ipynb
scripts/: strip_notebooks.py
src/ddae1d/: __init__.py  model.py  paths.py  utils.py
