[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "diamond-dae-pipeline"
version = "1.0.3"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "ipykernel>=6.0",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "h5py>=3.10",
    "optuna>=3.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
